<resources>
    <string name="app_name">RestaurantReservation</string>


    <string name="download_menu">Download Menu</string>
    <string name="next">Next</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="address">941 Progress Ave, Scarborough, ON M1G 3T8</string>
    <string name="map_api_key">AIzaSyA3f-xv4I9G0di0xZy41lzHLfqty1BxBZU</string>


    <!-- Login Page & Registration -->
    <string name="labelPhoneNumber">Phone Number: </string>
    <string name="labelPassword">Password: </string>
    <string name="labelAuthenticationCode">Enter 4 Digit Code: </string>
    <string name="labelFirstName">First Name: </string>
    <string name="labelLastName">Last Name: </string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="my_registration">My Registration</string>
    <string name="make_registration">Make Registration</string>
    <string name="no_of_people">No. of People:</string>
    <string name="date">Date:</string>
    <string name="special_note">Special Note:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- View Reservation -->
    <string name="labelTableNumber">Table Number:</string>
    <string name="labelNumberOfGuess">Number of Guess:</string>
    <string name="labelDate">Reservation Date:</string>
    <string name="labelTime">Arrival Time:</string>
    <string name="labelNotes">Notes:</string>
</resources>
