<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:background="@drawable/gradient_white">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="306dp"
        android:layout_height="198dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mapView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="220dp"
        android:text="@string/address"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCall"
        style="@style/ConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mapView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="154dp"
        android:background="@drawable/round_button"
        android:onClick="onClickCall"
        android:text="@string/call"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnEmail"
        style="@style/CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mapView"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="154dp"
        android:background="@drawable/round_button"
        android:onClick="onClickEmail"
        android:text="@string/email" />
</RelativeLayout>